[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -34.0
margin_top = 25.0
margin_right = 34.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "0:0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.0
margin_top = 104.0
margin_right = 104.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "SpinPong"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwoPlayersButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 31.0
margin_right = 61.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 4 )
text = "2 Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnePlayerButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -15.5
margin_right = 61.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 4 )
text = "1 Player"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TwoPlayersButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TwoPlayersButton" to="." method="_on_TwoPlayersButton_pressed"]
[connection signal="pressed" from="OnePlayerButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OnePlayerButton" to="." method="_on_OnePlayerButton_pressed"]
